--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postinstall": "npm run setup"
   },
   "bin": {
-    "amorphie-setup": "./scripts/setup-project.js"
+    "amorphie-setup": "scripts/setup-project.js"
   },
   "files": [
     "Core/**/*",
@@ -56,7 +56,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/amorphie/definition-core.git"
+    "url": "git+https://github.com/amorphie/definition-core.git"
   },
   "main": "index.js"
 }
