--- a/amorphie.config.json
+++ b/amorphie.config.json
@@ -1,77 +1,121 @@
 {
-    "version": "1.0.0",
-    "description": "AmorphieCore Domain Definition Configuration",
-    "domain": "core",
-    "paths": {
-        "componentsRoot": "core",
-        "tasks": "Tasks",
-        "views": "Views",
-        "functions": "Functions",
-        "extensions": "Extensions",
-        "workflows": "Workflows",
-        "schemas": "Schemas"
+  "version": "1.0.0",
+  "description": "Amorphie Core Domain Definition Configuration",
+  "domain": "core",
+  "paths": {
+    "componentsRoot": "core",
+    "tasks": "Tasks",
+    "views": "Views",
+    "functions": "Functions",
+    "extensions": "Extensions",
+    "workflows": "Workflows",
+    "schemas": "Schemas"
+  },
+  "validation": {
+    "enabled": true,
+    "autoScan": true,
+    "includePatterns": [
+      "**/*.json"
+    ],
+    "excludePatterns": [
+      "**/node_modules/**",
+      "**/package*.json",
+      "**/.git/**",
+      "**/dist/**",
+      "**/build/**",
+      "**/coverage/**",
+      "**/.vscode/**",
+      "**/.ajv-*/**",
+      "**/ajv-*/**",
+      "**/.tmp/**",
+      "**/tmp/**",
+      "**/genDocs/**"
+    ]
+  },
+  "linting": {
+    "enabled": true,
+    "rules": {
+      "filename-consistency": true,
+      "reference-integrity": true,
+      "version-consistency": true,
+      "label-completeness": true,
+      "state-machine-validation": true,
+      "schema-validation": true
     },
-    "validation": {
-        "enabled": true,
-        "autoScan": true,
-        "includePatterns": [
-            "**/*.json"
-        ],
-        "excludePatterns": [
-            "**/node_modules/**",
-            "**/package*.json",
-            "**/.git/**",
-            "**/dist/**",
-            "**/build/**",
-            "**/coverage/**",
-            "**/.vscode/**",
-            "**/.ajv-*/**",
-            "**/ajv-*/**",
-            "**/.tmp/**",
-            "**/tmp/**",
-            "**/genDocs/**"
-        ]
-    },
-    "linting": {
-        "enabled": true,
-        "rules": {
-            "filename-consistency": true,
-            "reference-integrity": true,
-            "version-consistency": true,
-            "label-completeness": true,
-            "state-machine-validation": true,
-            "schema-validation": true
-        },
-        "requiredLanguages": [
-            "en-US",
-            "tr-TR"
-        ],
-        "allowedWorkflowTypes": [
-            "Schema",
-            "Workflow",
-            "Task",
-            "View",
-            "Function",
-            "Extension"
-        ]
-    },
-    "schemas": {
-        "autoDetection": true,
-        "mappings": {
-            "sys-tasks": "task-definition.schema.json",
-            "sys-views": "view-definition.schema.json",
-            "sys-functions": "function-definition.schema.json",
-            "sys-extensions": "extension-definition.schema.json",
-            "sys-flows": "workflow-definition.schema.json",
-            "sys-schemas": "schema-definition.schema.json"
-        }
-    },
-    "setup": {
-        "createFolders": true,
-        "updateVSCodeSettings": true,
-        "examples": {
-            "createSample": false,
-            "domain": "core"
-        }
+    "requiredLanguages": [
+      "en-US",
+      "tr-TR"
+    ],
+    "allowedWorkflowTypes": [
+      "Schema",
+      "Workflow",
+      "Task",
+      "View",
+      "Function",
+      "Extension"
+    ]
+  },
+  "schemas": {
+    "autoDetection": true,
+    "mappings": {
+      "sys-tasks": "task-definition.schema.json",
+      "sys-views": "view-definition.schema.json",
+      "sys-functions": "function-definition.schema.json",
+      "sys-extensions": "extension-definition.schema.json",
+      "sys-flows": "workflow-definition.schema.json",
+      "sys-schemas": "schema-definition.schema.json"
     }
+  },
+  "setup": {
+    "createFolders": true,
+    "updateVSCodeSettings": true,
+    "examples": {
+      "createSample": false,
+      "domain": "core"
+    }
+  },
+  "exports": {
+    "functions": [],
+    "workflows": [],
+    "tasks": [],
+    "views": [],
+    "schemas": [],
+    "extensions": [
+      "available-transitions.1.0.0.json"
+    ],
+    "visibility": "public",
+    "metadata": {
+      "description": "Exported components for core domain",
+      "maintainer": "Amorphie Team",
+      "license": "MIT",
+      "keywords": [
+        "core",
+        "amorphie",
+        "workflow",
+        "domain"
+      ]
+    }
+  },
+  "dependencies": {
+    "domains": [],
+    "npm": []
+  },
+  "referenceResolution": {
+    "enabled": true,
+    "validateOnBuild": true,
+    "strictMode": true,
+    "validateReferenceConsistency": true,
+    "validateSchemas": true,
+    "allowedHosts": [
+      "registry.npmjs.org",
+      "npm.amorphie.com",
+      "npm.pkg.github.com"
+    ],
+    "schemaValidationRules": {
+      "enforceKeyFormat": true,
+      "enforceVersionFormat": true,
+      "enforceFilenameConsistency": true,
+      "allowUnknownProperties": false
+    }
+  }
 }
