feat: improve validation command with -f flag support
- Update npm validate script to support -f flag for single file validation
- Enhance validate-component.js with modern CLI argument parsing
- Add help command support (--help)
- Maintain backward compatibility with existing validation scripts
- Update README.md with new usage examples

Usage:
npm run validate -- -f path/to/file.json
npm run validate -- --help

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run lint:domain",
-    "validate": "node .vscode/scripts/validate-component.js ${file} core",
+    "validate": "node .vscode/scripts/validate-component.js",
     "validate:all": "node .vscode/scripts/validate-component.js core core",
     "validate:verbose": "node .vscode/scripts/validate-component.js core core --verbose",
     "lint": "node .vscode/scripts/lint-domain.js core",
