fix: correct 'onExitss' typo to 'onExits' in core workflow files
- Fixed 4 instances in sys-functions.1.0.0.json
- Fixed 4 instances in sys-extensions.1.0.0.json
- All workflow state definitions now properly reference onExits field
- Validation passes successfully after fix

--- a/core/Workflows/sys-extensions.1.0.0.json
+++ b/core/Workflows/sys-extensions.1.0.0.json
@@ -123,7 +123,7 @@
         ],
         "view": null,
         "onEntries": [],
-        "onExitss": [],
+        "onExits": [],
         "versionStrategy": "Minor"
       },
       {
@@ -202,7 +202,7 @@
         ],
         "view": null,
         "onEntries": [],
-        "onExitss": [],
+        "onExits": [],
         "versionStrategy": "Minor"
       },
       {
@@ -260,7 +260,7 @@
         ],
         "view": null,
         "onEntries": [],
-        "onExitss": [],
+        "onExits": [],
         "versionStrategy": "Minor"
       },
       {
@@ -299,7 +299,7 @@
         ],
         "view": null,
         "onEntries": [],
-        "onExitss": [],
+        "onExits": [],
         "versionStrategy": "Minor"
       }
     ]
